Click on the screen and a monster shows up. Click on the monster and shoot fireballs at him until he dies. Doesn't end gracefully....

--- a/GameProject/res/values/strings.xml
+++ b/GameProject/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="level">Level: </string>
     <string name="reset_game">Reset Game</string>
     <string name="game_over">Game Over</string>
+    <string name="monster_health">Monster Health: </string>
+    <string name="player_health">Player Health: </string>
 </resources>
